--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ members = [
     'node',
     'pallets/template',
     'pallets/kitties',
+    'pallets/configurable-constant',
+    'pallets/lockable-currency',
+    'pallets/mint-token',
+    'pallets/oldkitties',
+    'pallets/proof-of-existence',
+    'pallets/reward-coin',
+    'pallets/simple-crowdfund',
     'runtime',
 ]
 [profile.release]
