--- a/pallets/simple-crowdfund/Cargo.toml
+++ b/pallets/simple-crowdfund/Cargo.toml
@@ -1,37 +1,54 @@
 [package]
-name = "simple-crowdfund"
-version = "2.0.0"
-edition = "2018"
 authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-repository = 'https://github.com/substrate-developer-hub/recipes'
-description = "A pallet that implements a crowdfund and demonstrates using child storage tries"
-license = "GPL-3.0-or-later"
+description = 'A pallet that can mange multiple accounts using child storage, with which users can pool funds toward a common goal.'
+edition = '2018'
+homepage = 'https://substrate.dev'
+license = 'Unlicense'
+name = 'simple-crowdfund'
+publish = false
+readme = 'README.md'
+repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+version = '3.0.0'
+
+[package.metadata.docs.rs]
+targets = ['x86_64-unknown-linux-gnu']
+
+# EXPLA: only needed in our pallets test
+# [dev-dependencies.serde]
+# version = '1.0.119'
 
 [dependencies]
-parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }
+codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
+serde = { version = "1.0.119", optional = true }
+frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
+frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
+pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
+frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
+sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
 
-# Substrate packages
-frame-support = { version = '3.0', default-features = false }
-frame-system = { version = '3.0', default-features = false }
-sp-core = { version = '3.0', default-features = false }
-sp-runtime = { version = '3.0', default-features = false }
-sp-std = { version = '3.0', default-features = false }
-sp-storage = { version = '3.0', default-features = false }
+[build-dependencies]
+substrate-wasm-builder = {git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false}
 
 [dev-dependencies]
-serde = '1.0'
-sp-core = '3.0'
-sp-io = '3.0'
-pallet-balances = '3.0'
+sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
+sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
+sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 
+# EXPLA: tell pallet dependencies to only use their std, when this pallet also uses it's std feature (Rust standard library, not compatible with WASM (that's why no_std))
 [features]
 default = ['std']
+runtime-benchmarks = [
+	'frame-benchmarking',
+	'frame-support/runtime-benchmarks',
+	'frame-system/runtime-benchmarks',
+]
 std = [
+	'codec/std',
 	'frame-support/std',
 	'frame-system/std',
-	'parity-scale-codec/std',
-	'sp-core/std',
-	'sp-runtime/std',
-	'sp-std/std',
-	'sp-storage/std',
+	'pallet-balances/std',
+	'frame-benchmarking/std',
 ]
+# Note: frame-support `try-runtime` feature is released after v3.
+#   Uncomment the following line when `frame-support` version > `3.0.0`.
+try-runtime = ['frame-support/try-runtime']
