--- a/pallets/mint-token/Cargo.toml
+++ b/pallets/mint-token/Cargo.toml
@@ -21,6 +21,7 @@ sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkad
 [dev-dependencies]
 sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
+pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 
 [features]
 default = ['std']
